--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
             text-align: center;
             margin-top: 30px;
         }
+        footer {
+            background-color: #dcd6cc;
+            text-align: center;
+            padding: 20px;
+            font-size: 0.9em;
+        }
+        footer a {
+            color: #3e3e3e;
+            margin: 0 10px;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -47,10 +58,20 @@
         <h1>Unspun</h1>
         <h2>Politics without performance</h2>
     </header>
+
     <main>
         <p>Welcome to <strong>Unspun</strong> — a platform for truth-telling, care-centered politics, and collective resistance. We reject attack-based discourse and political theater. Instead, we speak plainly, act boldly, and build together.</p>
         <p>Our mission is rooted in honesty, empathy, and solidarity. We believe politics should protect people, not perform for power. Join us in creating space for genuine conversations and meaningful change.</p>
         <div class="hand-symbol">✋</div>
     </main>
+
+    <footer>
+        <p>&copy; 2024 Unspun. All rights reserved.</p>
+        <nav>
+            index.htmlHome</a>
+            about.htmlAbout</a>
+            issues.htmlIssues</a>
+        </nav>
+    </footer>
 </body>
 </html>
